#ifndef LUTIN_IDTERMINAL_H
#define LUTIN_IDTERMINAL_H

#include "Symbole.h"


class IdTerminal : public Symbole
{
public:
    IdTerminal(std::string nom) : Symbole(ID_TERMINAL),nom(nom)
    { };

    ~IdTerminal()
    {

    }

    void afficher()
    {
        std::cout << nom;
    }

protected:
    std::string nom;
};


#endif //LUTIN_IDTERMINAL_H
